--- a/mod4_solution/index.html
+++ b/mod4_solution/index.html
@@ -20,7 +20,7 @@
 
   <h1>Module 4 Solution</h1>
 
-  <p>Open up the console to view the output.</p>
+  <p>Open up the console in Developer Tools to view the output.</p>
 
 </body>
 
