--- a/mod5_solution/index.html
+++ b/mod5_solution/index.html
@@ -86,7 +86,7 @@
 
             <li id="navMenuButton">
 
-              <a href="#" onclick="$dc.loadMenuCategories();">
+              <a href="#" onclick="$dc.loadMenuCategories({{randomCategoryShortName}});">
 
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
 
